admin, user dashboard progress

--- a/Auth/signup.html
+++ b/Auth/signup.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="logo.png" alt="Logo" class="logo">
+            <img src="/Images/logo.png" alt="Logo" class="logo">
         <div class="left">
             
             <h2>Create an account</h2><br>
@@ -18,7 +18,7 @@
             <div class="form-container">
                 <div class="form-box">
                     <h3>Create an account</h3>
-                    <form action="signup.php" method="post">
+                    <form action="Auth/signup.php" method="post">
                         <input type="email" name="email" placeholder="Email" required>
                         <input type="text" name="username" placeholder="Username" required>
                         <input type="tel" name="telephone" placeholder="Phone number" required>
