--- a/Auth/forgotpass.html
+++ b/Auth/forgotpass.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="logo.png" alt="Logo" class="logo">
+        <img src="/Images/logo.png"alt="Logo" class="logo">
         <div class="form-container">
             <div class="form-box">
                 <h3>Forgot Password</h3>
