--- a/Auth/login.html
+++ b/Auth/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="logo.png" alt="Logo" class="logo">
+        <img src="/Images/logo.png"alt="Logo" class="logo">
         <div class="left">
             <h2>Login to your account</h2>
             <br>
@@ -22,7 +22,7 @@
                         <input type="email" name="email" placeholder="Email" required>
                         <input type="password" name="password" placeholder="Password" required>
                         <button type="submit">Log in</button>
-                        <p><a href="forgot-password.html">Forgot Password?</a></p><br>
+                        <p><a href="forgotpass.html">Forgot Password?</a></p><br>
                         <p>Don't have an account? <a href="signup.html">Sign up</a></p>
                     </form>
                     
