--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <a href="home.html">
-                    <img src="logo.png" alt="Logo" class="logo">
+                    <img src="Images/logo.png" alt="Logo" class="logo">
                     
                 </a>
             </div>
@@ -19,7 +19,7 @@
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="singup.html" class="btn-get-started">Get Started</a></li>
+                <li><a href="Auth/signup.html" class="btn-get-started">Get Started</a></li>
             </ul>
         </div>
     </nav>
@@ -28,7 +28,7 @@
         <div class="header-content">
             <h1>Welcome to Alert Kenya</h1>
             <p>Explore my projects and get to know more about my work.</p>
-            <a href="singup.html" class="btn-get-started">Get Started</a>
+            <a href="Auth/signup.html" class="btn-get-started">Get Started</a>
         </div>
     </header>
 
@@ -55,7 +55,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 MyPortfolio. All rights reserved.</p>
+        <p>&copy; 2024 My Portfolio. All rights reserved.</p>
     </footer>
 </body>
 </html>
